# triton-variable-moe

./: .gitignore  CLAUDE.md  IMPLEMENTATION_GUIDE.md  README.md  pyproject.toml
benchmarks/: __init__.py  bench_forward.py  bench_fwd_bwd.py  bench_gemm_forward.py  bench_moe.py  bench_training.py  profile_backward.py  profiler.py  validate_training.py
reference/: __init__.py  moe.py  topology_var.py
tests/: __init__.py  conftest.py  test_backward.py  test_forward.py  test_gather.py  test_grouped_gemm.py  test_grouped_gemm_backward.py  test_scatter.py
triton_moe/: __init__.py  moe.py
triton_moe/kernels/: __init__.py  activation.py  fused_cumsum.py  gather.py  grouped_gemm.py  scatter.py
